argocd/default-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default
spec:
  addresses:
    - type: IPAddress
      value: 192.168.18.3
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        kinds:
          - kind: GRPCRoute
          - kind: HTTPRoute
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        kinds:
          - kind: GRPCRoute
          - kind: HTTPRoute
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: clee-private-morphacy-net
    # Disabled as it causes https://github.com/cilium/cilium/issues/42013
    - name: tls
      protocol: TLS
      port: 443
      allowedRoutes:
        kinds:
          - kind: TLSRoute
        namespaces:
          from: All
      tls:
        mode: Passthrough
        certificateRefs:
          - kind: Secret
            name: clee-private-morphacy-net
