argocd/tls-passthrough-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls-passthrough
spec:
  gatewayClassName: cilium
  listeners:
    # - name: http
    #   protocol: HTTP
    #   port: 80
    #   allowedRoutes:
    #     kinds:
    #       - kind: HTTPRoute
    #     namespaces:
    #       from: Same
    - name: tls
      protocol: TLS
      port: 443
      allowedRoutes:
        kinds:
          - kind: TLSRoute
        namespaces:
          from: All
      tls:
        mode: Passthrough
        certificateRefs:
          - kind: Secret
            name: clee-private-morphacy-net
