argocd/default-https-redirect-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
spec:
  hostnames:
    - "chris-pc.clee.private.morphacy.net"
    - "service.clee.private.morphacy.net"
    - "service.chris-pc.clee.private.morphacy.net"
    - "*.service.clee.private.morphacy.net"
    - "*.service.chris-pc.clee.private.morphacy.net"
  parentRefs:
    - name: default
      namespace: default
      port: 80
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            # statusCode: 301
